--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clean-website",
+  "name": "website",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://pgerspach.github.io/website",
