--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+src/*
+public/*
+build/static/css/*.map
+build/static/js/*.map
+
 /node_modules
 /.pnp
 .pnp.js
@@ -9,7 +14,7 @@
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
