--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gh-pages": "^2.0.1",
     "path": "^0.12.7",
     "react": "^16.8.4",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
