--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-favicon": "^2.0.1",
     "gh-pages": "^2.0.1",
+    "nodemailer": "^6.0.0",
     "path": "^0.12.7",
     "react": "^16.8.4",
     "react-device-detect": "^1.6.2",
